0.71
-----------
- Added feature to receive captions in BIN format according to CCExtractor's own
  protocol over TCP (-tcp port [-tcppassword password])
- Added ability to send cations to the server described above or to the
  online repository (-sendto host[:port])

0.70 - GSOC
-----------
This is the first release that is part of Google's Summer of Code.
Anshul, Ruslan and Willem joined CCExtractor to work on a number of things
over the summer, and their work is already reaching the mainstream 
version of CCExtractor.

- Added a huge dictionary submitted by Matt Stockard.
- Added DVB subtitles decoder, spupng in output
- Added support for cdt2 media atoms in QT video files. Now multiple atoms in
 a single sample sequence are supported.
- Changed Makefile.
- Fixed some bugs.
- Added feature to print info about file's subtitles and streams (-out=report).
- Support Long PMT.
- Support Configuration file.
	- There is an sample configuration file in doc/ folder with name
	  ccextractor.cnf.sample
	- Just now only ccextractor.cnf named files kept beside ccextractor
	  executable is supported
	- for details of which options can be set using configuration file,
	  please look at sample file.

- Added options for custom transcript output:
	new parameter (-customtxt format), where the format must be like this: 1100100 (7 digits).
	These indicate whether the next things should be displayed  or not in the (timed) transcript:
		- Display start time
		- Display end time
		- Display caption mode
		- Display caption channel
		- Use a relative timestamp ( relative to the sample)
		- Display XDS info
		- Use colors
	Examples:
		0000101 is the default setting for transcripts
		1110101 is the default for timed transcripts
		1111001 is the default setting for -ucla
	Make sure you use this parameter after others that might affect these 
	settings (-out, -ucla, -xds, -txt, -ttxt, ...)
- Fixed Negative timing Bug

0.69
----