@@ -4,8 +4,8 @@ CC = gcc
 
 CFLAGS = -O3 -std=gnu99
 INCLUDE = -I../src/gpacmp4/ -I../src/libpng -I../src/zlib
-ALL_FLAGS = -Wno-write-strings -DGPAC_CONFIG_LINUX -D_FILE_OFFSET_BITS=64 
-LDFLAGS = -lm -zmuldefs
+ALL_FLAGS = -Wno-write-strings -D_FILE_OFFSET_BITS=64
+LDFLAGS = -lm
 
 TARGET = ccextractor
 
