@@ -4,6 +4,7 @@
   protocol over TCP (-tcp port [-tcppassword password])
 - Added ability to send cations to the server described above or to the
   online repository (-sendto host[:port])
+- Compilation in Cygwin using linux/Makefile
 
 0.70 - GSOC
 -----------
